added a few blocks

--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -116,6 +116,8 @@
 
 @media (min-width: 1024px) {
     .header {
+        background-color: var(--black-100);
+        
         &-wrapper__actions {
             gap: 24px;
 
