--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,4 +3,8 @@
 
 @import './blocks/header';
 @import './blocks/mobile-menu';
-@import './blocks/hero'
+@import './blocks/hero';
+@import './blocks/apartments';
+@import './blocks/about';
+@import './blocks/map';
+@import './blocks/contacts';
