--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -1,3 +1,243 @@
 .contacts {
-    
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 40px 0;
+
+    h3 {
+        font-size: 20px;
+        line-height: 160%;
+        text-align: center;
+    }
+
+    &-info {
+        margin-top: 16px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    &-info__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        gap: 24px;
+        padding: 48px;
+
+        &>* {
+            text-align: center;
+        }
+
+        h4 {
+            font-size: 12px;
+            line-height: 140%;
+        }
+
+        span {
+            font-size: 16px;
+            line-height: 160%;
+        }
+
+        &-phones {
+            display: flex;
+            flex-direction: column;
+        }
+
+        &-schedule {
+            p,span {
+                font-size: 16px;
+                line-height: 160%;
+            }
+
+            span {
+                color: var(--grey-100);
+            }
+        }
+
+        &-mails {
+            display: flex;
+            align-items: center;
+            gap: 24px;
+
+            div {
+                display: flex;
+                flex-direction: column;
+                gap: 8px;
+            }
+
+            div a {
+                font-size: 16px;
+                line-height: 160%;
+            }
+        }
+
+        &:nth-child(1) {
+            border-bottom: 1px solid var(--primary-500);
+            border-right: 1px solid var(--primary-500);
+            border-top: 1px solid var(--primary-500);
+        }
+
+        &:nth-child(2) {
+            border-bottom: 1px solid var(--primary-500);
+            border-left: 1px solid var(--primary-500);
+            border-top: 1px solid var(--primary-500);
+        }
+    }
+
+    &-form {
+        display: flex;
+        margin: auto;
+        width: -webkit-fill-available;
+        max-width: 550px;
+        padding: 32px 16px;
+
+        form {
+            margin-top: 24px;
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+            width: 100%;
+        }
+
+        form h5  {
+            font-size: 20px;
+            line-height: 160%;
+        }
+
+        &__fields {
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+        }
+
+        &__group input {
+            display: flex;
+            align-items: flex-start;
+            width: 100%;
+            height: 21px;
+            border-bottom: 1px solid var(--white);
+            padding: 4px 0px 14px 0px;
+            outline: none;
+
+            &::placeholder {
+                font-size: 16px;
+                line-height: 160%;
+                opacity: 0.7;
+            }
+        }
+
+        &__policy {
+            position: relative;
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+        }
+
+        &__policy-checkbox {
+            position: relative;
+            padding-left: 40px;
+
+            input {
+                position: absolute;
+                top: 9px;
+                left: 0;
+                z-index: 10;
+                width: 18px;
+                height: 18px;
+                margin: 2px;
+                opacity: 0;
+                cursor: pointer;
+
+                @media (min-width: 377px) {
+                    top: 0;
+                }
+            }
+
+            .checkmark {
+                position: absolute;
+                top: 9px;
+                left: 0;
+                width: 18px;
+                height: 18px;
+                border: 1px solid var(--white);
+                cursor: pointer;
+
+                @media (min-width: 377px) {
+                    top: 0;
+                }
+            }
+
+            input:checked ~ .checkmark:after {
+                display: block;
+                position: absolute;
+                content: '';
+                top: 1px;
+                left: 6px;
+                width: 5px;
+                height: 11px;
+                border: solid var(--white);
+                border-width: 0 1px 1px 0;
+                transform: rotate(45deg);
+            }
+
+            .text {
+                padding-right: 25px;
+                font-size: 12px;
+                line-height: 140%;
+            }
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .contacts {
+        &-info {
+            flex-direction: row;
+        }
+
+        &-info__wrapper {
+            width: 50%;
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .contacts {
+        gap: 45px;
+
+        &-form {
+            max-width: unset;
+            margin: unset;
+            padding: 32px 0;
+
+            form {
+                flex-direction: row;
+                flex-wrap: wrap;
+                align-items: flex-start;
+
+                h5 {
+                    width: 18.4%;
+                }
+
+                .btn {
+                    padding: 16px 23px;
+                }
+            }
+
+            &__fields {
+                flex-direction: row;
+                flex-wrap: wrap;
+                width: 69%;
+
+                @media (min-width: 1360px) {
+                    width: 65%;
+                }
+            }
+
+            &__group {
+                width: 48.2%;
+            }
+        }
+    }
 }
