--- a/src/sass/common/_common.scss
+++ b/src/sass/common/_common.scss
@@ -178,13 +178,14 @@ html {
 
 .btn {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     justify-content: center;
 
     padding: 16px 0;
 
     width: 100%;
 
+    font-weight: 300;
     font-size: 14px;
     line-height: 1.4;
     letter-spacing: 0.1em;
